--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         
         <aside>
-            <article class="card" class="profile">
+            <article class="card profile">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris Van Java</p>
