--- a/calculator/index.html
+++ b/calculator/index.html
@@ -12,6 +12,7 @@
     <div class="flex-container-column card">
         <!-- screen -->
         <div class="display">
+            <p id="lastInput"></p>
             <h1 id="displayNumber">0</h1>
         </div>
 
