add calculator history

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -41,7 +41,23 @@
             <div class="button equals">=</div>
         </div>
     </div>
+
+    <div class="card history">
+        <h2>Riwayat Perhitungan</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Angka Pertama</th>
+                    <th>Operator</th>
+                    <th>Angka Kedua</th>
+                    <th>Hasil</th>
+                </tr>
+            </thead>
+            <tbody id="history-perhitungan"></tbody>
+        </table>
+    </div>
     
+    <script src="assets/storage.js"></script>
     <script src="assets/kalkulator.js"></script>
 
 </body>
